--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
 greenlet==1.1.3.post0
 numpy==1.23.4
+packaging==21.3
 pandas==1.5.1
+patsy==0.5.3
+plotly==5.10.0
+plotly-express==0.4.1
 PyMySQL==1.0.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.5
+scipy==1.9.3
 six==1.16.0
 SQLAlchemy==1.4.42
+statsmodels==0.13.2
+tenacity==8.1.0
