--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+contourpy==1.0.6
+cycler==0.11.0
+fonttools==4.38.0
 greenlet==1.1.3.post0
+kiwisolver==1.4.4
+matplotlib==3.6.1
 numpy==1.23.4
 packaging==21.3
 pandas==1.5.1
 patsy==0.5.3
+Pillow==9.3.0
 plotly==5.10.0
 plotly-express==0.4.1
 PyMySQL==1.0.2
